style.css
* {
	margin: 0;
	padding: 0;
}

html,
body {
	height: 100%;
}

.page-wrap {
	min-height: 100%;
	margin-bottom: -4em;
	position: relative;
}
.page-wrap:after {
	content: "";
	display: block;
}

.site-footer,
.page-wrap:after {
	height: 4em;
}

.site-footer {
	background-color: #555555;
	color: #fff0f0;
	text-align: center;
}

body {
	box-sizing: border-box;
	background-color: #dad4d4;
	font-family: 'Exo 2', sans-serif;
}

nav {
	background-color: #363636;
	display: flex;
	justify-content: space-around;
	align-items: center;
	min-height: 8vh;
}

a {
	text-decoration: none;
}

.nav-links a:hover {
	color: #e9e5e5;
	font-weight: bold;
}
.logo {
	color: #7dfc57;
	font-size: 1.5rem;
}

header {
	text-align: center;
}

.nav-links a {
	color: #b3fa9e;
	text-transform: uppercase;
	letter-spacing: 1.5px;
	font-size: .7rem;
}

.nav-links li {
	list-style: none;
}

.nav-links {
	display: flex;
	justify-content: space-around;
	width: 50%;
}

.burger div {
	background-color: #7dfc57;
	width: 30px;
	height: 3px;
	margin: 6px;
}

.burger {
	cursor: pointer;
}

.burger {
	display: none;
}

h1 {
	font-weight: 900;
	color: #555555;
}

.underline {
	display: block;
	margin: 0 auto;
	width: 40%;
	height: 1.5px;
	background-color: #7dfc57;
}

/*=============================================================
                    MEDIA QUERIES
==============================================================*/

@media screen and (max-width: 800px) {
	.nav-links {
		width: 70%;
	}
}

@media screen and (max-width: 675px) {
	body {
		overflow-x: hidden;
		/* position: relative; */
	}

	.burger {
		display: block;
	}

	.nav-links {
		display: flex;
		flex-direction: column;
		justify-content: space-around;
		align-items: center;
		text-align: center;
		width: 50%;
		height: 20vh;
		position: absolute;
		right: 0%;
		background-color: #363636;
		top: 8%;
		margin: 0;
		transform: translateX(100%);
	}

	.nav-links li {
		display: block;
		width: 100%;
		padding: .7em;
	}

	.nav-links li:hover {
		background-color: rgba(218, 212, 212, .2);
	}
}

.nav-links-appear {
	transform: translateX(0%);
}

/*==============================================================
                TASKS ENTRY ZONE
==============================================================*/

#myform {
	display: flex;
	width: 65%;
	justify-content: center;
	margin: 1.5em auto;
}

.task-input {
	padding: 1em;
	border-radius: 50px;
	border: none;
	width: 60%;
	font-size: 1.2rem;
	color: #555555;
	margin-right: .5em;
}

#task-validation-btn {
	width: 30%;
	border-radius: 50px;
	border: none;
	font-size: 1.2rem;
	color: #555555;
	text-transform: uppercase;
	background-color: #b3fa9e;
}

#task-validation-btn:hover,
#task-validation-btn:focus {
	color: #b3fa9e;
	background-color: #a39f9f;
	cursor: pointer;
	outline: none;
}

input:focus {
	outline: none;
	background-color: #edfddd;
}

.tasks-appearing-area {
	width: 80%;
	margin: auto;
	display: flex;
	flex-direction: column; /* A revoir */
	justify-content: center;
	align-items: center;
	background-color: #fff0f0;
	border-radius: 50px;
}
.taskdisplay {
	background-color: #b3fa9e;
	padding: .5em;
	width: 70%;
	border-radius: 10px;
	font-size: 1.2rem;
	color: #555555;
	border: rgba(255, 116, 116, .4) .2px solid;
	word-break: break-all;
}

.edit-button,
.delete-button {
	width: 20%;
	height: 3em;
	padding: .4em;
	margin: 0 .7em;
	border-radius: 50px;
	border: none;
	padding: .2em .3em;
	color: #b3fa9e;
	text-transform: uppercase;
	background-color: #555555;
}

.delete-button {
	margin-right: 0;
}

.edit-button:hover,
.delete-button:hover,
.edit-button:focus,
.delete-button:focus {
	color: #b3fa9e;
	background-color: #a39f9f;
	cursor: pointer;
	outline: none;
}

.hide {
	display: none;
}

.container {
	display: flex;
	width: 90%;
	justify-content: space-between;
	align-items: center;
}

